[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robustepsi-ops"
version = "0.1.0"
description = "SRME Multiple-Generator operator (G) and adjoint (G*) in PyTorch"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "pytest>=7.0"
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
